# Rasterizacion

./: .gitignore
E1-basico/: CMakeLists.txt  COpenGL.cpp  COpenGL.h  box.cpp  primitiva.cpp
Frustum/: CMakeLists.txt  FrustumG.h  Plane.cpp  Vec3.cpp  Vec3.h  frustummain.cpp
LearnOpenGL/: 3.1.2.shadow_mapping.fs  CMakeLists.txt  camera_circle.cpp  camera_keyboard_dt.cpp  camera_mouse_zoom.cpp  coordinate_systems.cpp  filesystem.h  model_loading.cpp  multiple_lights.cpp  normal_mapping.cpp  shadow_mapping_base.cpp  shadow_mapping_depth.cpp  textures.cpp  textures_combined.cpp  transformations.cpp
MarchingCubes/: AABB.h  CMakeLists.txt  Camera.h  DistanceField.h  Frustum.h  MarchinCubes.h  Plane.h  Render.h  Triangle.cpp  Triangle.h  Voxel.h  glut_ply.cpp  glut_ply.h  main.cpp  mutable_priority_queue.h  priority_queue_example.cpp  priority_queue_example_2.cpp  vmath.h
MatricesGLM/: CMakeLists.txt  basico1.fs  basico1.vs  basico_textura.fs  basico_textura.vs  basico_textura_luces.fs  main.cpp
ModeloPLY/: CMakeLists.txt  basico1.fs  basico1.vs  main.cpp  main_freeglut.cpp
balonTorus/: CMakeLists.txt  ballAndTorusClipped.cpp  fragmentShader.glsl  shader.cpp  shader.h  vertexShader.glsl
matrices/: CMakeLists.txt  basico1.fs  basico1.vs  cgmath.cpp  cgmath.h  main_freeglut.cpp  vector.cpp  vector.h
